[gd_scene load_steps=7 format=3 uid="uid://cja6ofg20vexg"]

[ext_resource type="Script" path="res://scripts/world/room_world_1.gd" id="1_c3888"]
[ext_resource type="MeshLibrary" uid="uid://brtl7osjw18co" path="res://assets/world/world_1_mesh_lib.tres" id="2_1ac2a"]
[ext_resource type="PackedScene" uid="uid://cwdc4wu5e2q2y" path="res://scenes/world/room_changer.tscn" id="2_4abfg"]
[ext_resource type="PackedScene" uid="uid://ce86dk61xylkx" path="res://scenes/entities/room_activator.tscn" id="4_2ndti"]
[ext_resource type="PackedScene" uid="uid://bcyjv52keuase" path="res://scenes/world/door_world_1.tscn" id="4_rgk6i"]

[sub_resource type="Curve3D" id="Curve3D_jgcr4"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 10, 0, 10, 0, 0, 0, 0, 0, 0, 10, 0, -10, 0, 0, 0, 0, 0, 0, -10, 0, -10, 0, 0, 0, 0, 0, 0, -10, 0, 10, 0, 0, 0, 0, 0, 0, 10, 0, 10),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[node name="Room" type="Node3D"]
script = ExtResource("1_c3888")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 20, 1)
omni_range = 40.0
omni_attenuation = 0.1
omni_shadow_mode = 0

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("2_1ac2a")
data = {
"cells": PackedInt32Array(-9, 65527, 4, -9, 65528, 4, -9, 65529, 4, -9, 65530, 4, -9, 65531, 4, -9, 65532, 4, -9, 65533, 4, -9, 65534, 4, -9, 65535, 4, -9, 0, 4, -9, 1, 4, -9, 2, 4, -9, 3, 4, -9, 4, 4, -9, 5, 4, -9, 6, 4, -9, 7, 4, -9, 8, 4, -9, 9, 4, -8, 65527, 4, -8, 65528, 4, -8, 65529, 4, -8, 65530, 4, -8, 65531, 4, -8, 65532, 4, -8, 65533, 4, -8, 65534, 4, -8, 65535, 4, -8, 0, 4, -8, 1, 4, -8, 2, 4, -8, 3, 4, -8, 4, 4, -8, 5, 4, -8, 6, 4, -8, 7, 4, -8, 8, 4, -8, 9, 4, -7, 65527, 4, -7, 65528, 4, -7, 65529, 4, -7, 65530, 4, -7, 65531, 4, -7, 65532, 4, -7, 65533, 4, -7, 65534, 4, -7, 65535, 4, -7, 0, 4, -7, 1, 4, -7, 2, 4, -7, 3, 4, -7, 4, 4, -7, 5, 4, -7, 6, 4, -7, 7, 4, -7, 8, 4, -7, 9, 4, -6, 65527, 4, -6, 65528, 4, -6, 65529, 4, -6, 65530, 4, -6, 65531, 4, -6, 65532, 4, -6, 65533, 4, -6, 65534, 4, -6, 65535, 4, -6, 0, 4, -6, 1, 4, -6, 2, 4, -6, 3, 4, -6, 4, 4, -6, 5, 4, -6, 6, 4, -6, 7, 4, -6, 8, 4, -6, 9, 4, -5, 65527, 4, -5, 65528, 4, -5, 65529, 4, -5, 65530, 4, -5, 65531, 4, -5, 65532, 4, -5, 65533, 4, -5, 65534, 4, -5, 65535, 4, -5, 0, 4, -5, 1, 4, -5, 2, 4, -5, 3, 4, -5, 4, 4, -5, 5, 4, -5, 6, 4, -5, 7, 4, -5, 8, 4, -5, 9, 4, -4, 65527, 4, -4, 65528, 4, -4, 65529, 4, -4, 65530, 4, -4, 65531, 4, -4, 65532, 4, -4, 65533, 4, -4, 65534, 4, -4, 65535, 4, -4, 0, 4, -4, 1, 4, -4, 2, 4, -4, 3, 4, -4, 4, 4, -4, 5, 4, -4, 6, 4, -4, 7, 4, -4, 8, 4, -4, 9, 4, -3, 65527, 4, -3, 65528, 4, -3, 65529, 4, -3, 65530, 4, -3, 65531, 4, -3, 65532, 4, -3, 65533, 4, -3, 65534, 4, -3, 65535, 4, -3, 0, 4, -3, 1, 4, -3, 2, 4, -3, 3, 4, -3, 4, 4, -3, 5, 4, -3, 6, 4, -3, 7, 4, -3, 8, 4, -3, 9, 4, -2, 65527, 4, -2, 65528, 4, -2, 65529, 4, -2, 65530, 4, -2, 65531, 4, -2, 65532, 4, -2, 65533, 4, -2, 65534, 4, -2, 65535, 4, -2, 0, 4, -2, 1, 4, -2, 2, 4, -2, 3, 4, -2, 4, 4, -2, 5, 4, -2, 6, 4, -2, 7, 4, -2, 8, 4, -2, 9, 4, -1, 65527, 4, -1, 65528, 4, -1, 65529, 4, -1, 65530, 4, -1, 65531, 4, -1, 65532, 4, -1, 65533, 4, -1, 65534, 4, -1, 65535, 4, -1, 0, 4, -1, 1, 4, -1, 2, 4, -1, 3, 4, -1, 4, 4, -1, 5, 4, -1, 6, 4, -1, 7, 4, -1, 8, 4, -1, 9, 4, -65536, 65527, 4, -65536, 65528, 4, -65536, 65529, 4, -65536, 65530, 4, -65536, 65531, 4, -65536, 65532, 4, -65536, 65533, 4, -65536, 65534, 4, -65536, 65535, 4, -65536, 0, 4, -65536, 1, 4, -65536, 2, 4, -65536, 3, 4, -65536, 4, 4, -65536, 5, 4, -65536, 6, 4, -65536, 7, 4, -65536, 8, 4, -65536, 9, 4, -65535, 65527, 4, -65535, 65528, 4, -65535, 65529, 4, -65535, 65530, 4, -65535, 65531, 4, -65535, 65532, 4, -65535, 65533, 4, -65535, 65534, 4, -65535, 65535, 4, -65535, 0, 4, -65535, 1, 4, -65535, 2, 4, -65535, 3, 4, -65535, 4, 4, -65535, 5, 4, -65535, 6, 4, -65535, 7, 4, -65535, 8, 4, -65535, 9, 4, -65534, 65527, 4, -65534, 65528, 4, -65534, 65529, 4, -65534, 65530, 4, -65534, 65531, 4, -65534, 65532, 4, -65534, 65533, 4, -65534, 65534, 4, -65534, 65535, 4, -65534, 0, 4, -65534, 1, 4, -65534, 2, 4, -65534, 3, 4, -65534, 4, 4, -65534, 5, 4, -65534, 6, 4, -65534, 7, 4, -65534, 8, 4, -65534, 9, 4, -65533, 65527, 4, -65533, 65528, 4, -65533, 65529, 4, -65533, 65530, 4, -65533, 65531, 4, -65533, 65532, 4, -65533, 65533, 4, -65533, 65534, 4, -65533, 65535, 4, -65533, 0, 4, -65533, 1, 4, -65533, 2, 4, -65533, 3, 4, -65533, 4, 4, -65533, 5, 4, -65533, 6, 4, -65533, 7, 4, -65533, 8, 4, -65533, 9, 4, -65532, 65527, 4, -65532, 65528, 4, -65532, 65529, 4, -65532, 65530, 4, -65532, 65531, 4, -65532, 65532, 4, -65532, 65533, 4, -65532, 65534, 4, -65532, 65535, 4, -65532, 0, 4, -65532, 1, 4, -65532, 2, 4, -65532, 3, 4, -65532, 4, 4, -65532, 5, 4, -65532, 6, 4, -65532, 7, 4, -65532, 8, 4, -65532, 9, 4, -65531, 65527, 4, -65531, 65528, 4, -65531, 65529, 4, -65531, 65530, 4, -65531, 65531, 4, -65531, 65532, 4, -65531, 65533, 4, -65531, 65534, 4, -65531, 65535, 4, -65531, 0, 4, -65531, 1, 4, -65531, 2, 4, -65531, 3, 4, -65531, 4, 4, -65531, 5, 4, -65531, 6, 4, -65531, 7, 4, -65531, 8, 4, -65531, 9, 4, -65530, 65527, 4, -65530, 65528, 4, -65530, 65529, 4, -65530, 65530, 4, -65530, 65531, 4, -65530, 65532, 4, -65530, 65533, 4, -65530, 65534, 4, -65530, 65535, 4, -65530, 0, 4, -65530, 1, 4, -65530, 2, 4, -65530, 3, 4, -65530, 4, 4, -65530, 5, 4, -65530, 6, 4, -65530, 7, 4, -65530, 8, 4, -65530, 9, 4, -65529, 65527, 4, -65529, 65528, 4, -65529, 65529, 4, -65529, 65530, 4, -65529, 65531, 4, -65529, 65532, 4, -65529, 65533, 4, -65529, 65534, 4, -65529, 65535, 4, -65529, 0, 4, -65529, 1, 4, -65529, 2, 4, -65529, 3, 4, -65529, 4, 4, -65529, 5, 4, -65529, 6, 4, -65529, 7, 4, -65529, 8, 4, -65529, 9, 4, -65528, 65527, 4, -65528, 65528, 4, -65528, 65529, 4, -65528, 65530, 4, -65528, 65531, 4, -65528, 65532, 4, -65528, 65533, 4, -65528, 65534, 4, -65528, 65535, 4, -65528, 0, 4, -65528, 1, 4, -65528, 2, 4, -65528, 3, 4, -65528, 4, 4, -65528, 5, 4, -65528, 6, 4, -65528, 7, 4, -65528, 8, 4, -65528, 9, 4, -65527, 65527, 4, -65527, 65528, 4, -65527, 65529, 4, -65527, 65530, 4, -65527, 65531, 4, -65527, 65532, 4, -65527, 65533, 4, -65527, 65534, 1048580, -65527, 65535, 4, -65527, 0, 4, -65527, 1, 4, -65527, 2, 4, -65527, 3, 4, -65527, 4, 4, -65527, 5, 4, -65527, 6, 4, -65527, 7, 4, -65527, 8, 4, -65527, 9, 4, 65533, 8, 1441806, 65532, 8, 1441807, 65531, 8, 1441807, 65530, 8, 1441807, 65529, 8, 1441808, 3, 8, 1441808, 4, 8, 1441807, 5, 8, 1441807, 6, 8, 1441807, 7, 8, 1441806, 65528, 5, 655375, 65528, 6, 655375, 65528, 7, 655374, 65528, 4, 655375, 65528, 3, 655376, 65528, 65533, 655374, 65528, 65532, 655375, 65528, 65531, 655375, 65528, 65530, 655375, 65528, 65529, 655376, 65532, 65528, 1048591, 65531, 65528, 1048591, 65530, 65528, 1048591, 65529, 65528, 1048590, 65533, 65528, 1048592, 3, 65528, 1048590, 4, 65528, 1048591, 5, 65528, 1048591, 6, 65528, 1048591, 7, 65528, 1048592, 8, 65529, 14, 8, 65530, 15, 8, 65531, 15, 8, 65532, 15, 8, 65533, 15, 8, 3, 14, 8, 4, 15, 8, 5, 15, 8, 6, 15, 8, 7, 16, 65528, 8, 655367, 65528, 65528, 1048583, 8, 65528, 7, 8, 8, 1441799, 9, 2, 1441799, 9, 65534, 7, 2, 9, 1441799, 65534, 9, 655367, 65534, 65527, 1048583, 2, 65527, 7, 65527, 2, 655367, 65527, 65534, 1048583, 65533, 9, 655365, 65532, 9, 655365, 65531, 9, 655365, 65530, 9, 655365, 65529, 9, 655365, 65527, 9, 655364, 65527, 7, 1048581, 65527, 6, 1048581, 65527, 5, 1048581, 65527, 4, 1048581, 65527, 3, 1048581, 65527, 65533, 1048581, 65527, 65532, 1048581, 65527, 65531, 1048581, 65527, 65530, 1048581, 65527, 65529, 1048581, 65529, 65527, 5, 65530, 65527, 5, 65531, 65527, 5, 65532, 65527, 5, 65533, 65527, 5, 3, 65527, 5, 4, 65527, 5, 5, 65527, 5, 6, 65527, 5, 7, 65527, 5, 9, 65533, 1441797, 9, 65532, 1441797, 9, 65531, 1441797, 9, 65530, 1441797, 9, 65529, 1441797, 9, 3, 1441797, 9, 4, 1441797, 9, 5, 1441797, 9, 6, 1441797, 9, 7, 1441797, 4, 9, 655365, 5, 9, 655365, 6, 9, 655365, 7, 9, 655365, 3, 9, 655365, 9, 8, 1441798, 8, 9, 1441798, 65527, 8, 655366, 65528, 9, 655366, 65528, 65527, 1048582, 65527, 65528, 1048582, 9, 65528, 6, 8, 65527, 6, 10, 2, 655365, 10, 3, 655364, 10, 4, 655364, 10, 5, 655364, 10, 6, 655364, 10, 7, 655364, 10, 8, 655364, 10, 9, 655364, 9, 9, 655364, 9, 10, 655364, 8, 10, 655364, 7, 10, 655364, 6, 10, 655364, 5, 10, 655364, 4, 10, 655364, 3, 10, 655364, 2, 10, 1441797, 2, 11, 0, 2, 12, 0, 2, 13, 0, 1, 13, 0, 0, 13, 0, 65535, 13, 0, 65534, 13, 0, 65534, 12, 0, 65534, 11, 0, 65534, 10, 1048581, 65533, 10, 655364, 65532, 10, 655364, 65531, 10, 655364, 65530, 10, 655364, 65529, 10, 655364, 65528, 10, 655364, 65527, 10, 655364, 65526, 9, 655364, 65526, 8, 655364, 65526, 7, 655364, 65526, 6, 655364, 65526, 5, 655364, 65526, 4, 655364, 65526, 3, 655364, 65526, 2, 655365, 65525, 2, 0, 65524, 2, 0, 65523, 2, 0, 65523, 1, 0, 65523, 0, 0, 65523, 65535, 0, 65523, 65534, 0, 65524, 65534, 0, 65525, 65534, 0, 65526, 65533, 655364, 65526, 65532, 655364, 65526, 65531, 655364, 65526, 65530, 655364, 65526, 65529, 655364, 65526, 65528, 655364, 65526, 65527, 655364, 65527, 65526, 655364, 65528, 65526, 655364, 65529, 65526, 655364, 65530, 65526, 655364, 65531, 65526, 655364, 65532, 65526, 655364, 65533, 65526, 655364, 65534, 65526, 1048581, 65527, 65527, 655364, 65534, 65525, 0, 65534, 65524, 0, 65534, 65523, 0, 65535, 65523, 0, 0, 65523, 0, 1, 65523, 0, 2, 65523, 0, 2, 65524, 0, 2, 65525, 0, 2, 65526, 1441797, 3, 65526, 655364, 4, 65526, 655364, 5, 65526, 655364, 6, 65526, 655364, 7, 65526, 655364, 8, 65526, 655364, 9, 65526, 655364, 9, 65527, 655364, 10, 65527, 655364, 10, 65528, 655364, 10, 65529, 655364, 10, 65530, 655364, 10, 65531, 655364, 10, 65532, 655364, 10, 65533, 655364, 10, 65534, 5, 11, 65534, 0, 12, 65534, 0, 13, 65534, 0, 13, 65535, 0, 13, 0, 0, 13, 1, 0, 13, 2, 0, 12, 2, 0, 11, 2, 0, -65526, 65535, 4, -65525, 65535, 1048580, -65524, 65535, 1048580, -65524, 65534, 4, -65524, 0, 1048580, -65524, 1, 1048580, -65525, 1, 1048580, -65526, 1, 4, -65526, 0, 4, -65525, 0, 1048580, -1, 65526, 4, -1, 65525, 4, -1, 65524, 4, -65536, 65524, 4, -65535, 65524, 4, -65535, 65525, 4, -65535, 65526, 4, -65536, 65526, 4, -65536, 65525, 4, -10, 1, 4, -11, 1, 4, -12, 1, 4, -12, 0, 4, -12, 65535, 4, -11, 65535, 4, -10, 65535, 4, -10, 0, 4, -11, 0, 4, -1, 10, 4, -65536, 10, 4, -65535, 10, 4, -65535, 11, 4, -65535, 12, 4, -65536, 12, 4, -1, 12, 4, -1, 11, 4, -65536, 11, 4, 65538, 65526, 1, 65539, 65526, 1, 65540, 65526, 1, 65541, 65526, 1, 65542, 65526, 1, 65543, 65526, 1, 65544, 65526, 1, 65545, 65526, 2, 65545, 65527, 3, 65546, 65527, 2, 65546, 65528, 1441793, 65546, 65529, 1441793, 65546, 65530, 1441793, 65546, 65531, 1441793, 65546, 65532, 1441793, 65546, 65533, 1441793, 65546, 65534, 1441793, 65547, 65534, 0, 65548, 65534, 0, 65549, 65534, 0, 65549, 65535, 0, 65549, 0, 0, 65549, 1, 0, 65549, 2, 0, 65548, 2, 0, 65547, 2, 0, 65546, 2, 1441793, 65546, 3, 1441793, 65546, 4, 1441793, 65546, 5, 1441793, 65546, 6, 1441793, 65546, 7, 1441793, 65546, 8, 1441793, 65546, 9, 1441794, 65545, 9, 1441795, 65545, 10, 1441794, 65544, 10, 655361, 65543, 10, 655361, 65542, 10, 655361, 65541, 10, 655361, 65540, 10, 655361, 65539, 10, 655361, 65538, 10, 655361, 65538, 11, 0, 65538, 12, 0, 65538, 13, 0, 65537, 13, 0, 65536, 13, 0, 131071, 13, 0, 131070, 13, 0, 131070, 12, 0, 131070, 11, 655361, 131070, 10, 655361, 131069, 10, 655361, 131068, 10, 655361, 131067, 10, 655361, 131066, 10, 655361, 131065, 10, 655361, 131064, 10, 655361, 131063, 10, 655362, 131063, 9, 655363, 131062, 9, 655362, 131062, 8, 1048577, 131062, 7, 1048577, 131062, 6, 1048577, 131062, 5, 1048577, 131062, 4, 1048577, 131062, 3, 1048577, 131062, 2, 1048577, 131061, 2, 0, 131060, 2, 0, 131059, 2, 0, 131059, 1, 0, 131059, 0, 0, 131059, 65535, 0, 131059, 65534, 0, 131060, 65534, 0, 131061, 65534, 0, 131062, 65534, 1048577, 131062, 65533, 1048577, 131062, 65532, 1048577, 131062, 65531, 1048577, 131062, 65530, 1048577, 131062, 65529, 1048577, 131062, 65528, 1048577, 131062, 65527, 1048578, 131063, 65527, 1048579, 131063, 65526, 1048578, 131064, 65526, 1, 131065, 65526, 1, 131066, 65526, 1, 131067, 65526, 1, 131068, 65526, 1, 131069, 65526, 1, 131070, 65526, 1, 131070, 65525, 0, 131070, 65524, 0, 131070, 65523, 0, 131071, 65523, 0, 65536, 65523, 0, 65537, 65523, 0, 65538, 65523, 0, 65538, 65524, 0, 65538, 65525, 0, 131082, 2, 1441797, 131082, 3, 1441797, 131082, 4, 1441797, 131075, 65526, 5, 131076, 65526, 5, 131077, 65526, 5, 131078, 65526, 5, 131079, 65526, 5, 131080, 65526, 5, 196605, 65526, 5, 196604, 65526, 5, 196603, 65526, 5, 196602, 65526, 5, 196601, 65526, 5, 196600, 65526, 5, 131082, 65533, 1441797, 131082, 65532, 1441797, 131082, 65531, 1441797, 131082, 65530, 1441797, 131082, 65529, 1441797, 131082, 65528, 1441797, 131082, 5, 1441797, 131082, 6, 1441797, 131082, 7, 1441797, 131082, 8, 1441797, 131080, 10, 655365, 131079, 10, 655365, 131078, 10, 655365, 131077, 10, 655365, 131076, 10, 655365, 131075, 10, 655365, 196605, 10, 655365, 196604, 10, 655365, 196603, 10, 655365, 196602, 10, 655365, 196601, 10, 655365, 196600, 10, 655365, 196598, 8, 1048581, 196598, 7, 1048581, 196598, 6, 1048581, 196598, 5, 1048581, 196598, 4, 1048581, 196598, 3, 1048581, 196598, 65533, 1048581, 196598, 65532, 1048581, 196598, 65531, 1048581, 196598, 65530, 1048581, 196598, 65529, 1048581, 196598, 65528, 1048581, 196599, 65527, 1048583, 131081, 65527, 7, 131081, 9, 1441799, 196599, 9, 655367, 131081, 65526, 6, 131082, 65527, 6, 131082, 9, 1441798, 131081, 10, 1441798, 196599, 10, 655366, 196598, 9, 655366, 196598, 65527, 1048582, 196599, 65526, 1048582, 131074, 65526, 5, 131073, 65526, 5, 131072, 65526, 5, 196607, 65526, 5, 196606, 65526, 5, 196606, 10, 655365, 196607, 10, 655365, 131072, 10, 655365, 131073, 10, 655365, 131074, 10, 655365, 196598, 65534, 1048581, 196598, 65535, 1048581, 196598, 0, 1048581, 196598, 1, 1048581, 196598, 2, 1048581, 131082, 65534, 1441797, 131082, 65535, 1441797, 131082, 0, 1441797, 131082, 1, 1441797, 131071, 10, 655361, 65536, 10, 655361, 65537, 10, 655361, 131062, 1, 1048577, 131062, 65535, 1048577, 131071, 65526, 1, 65536, 65526, 1, 65537, 65526, 1, 65546, 65535, 1441793, 65546, 0, 1441793, 65546, 1, 1441793, 65526, 65534, 5, -10, 2, 4, -10, 65534, 4, 131062, 0, 1048577, 131060, 65535, 0, 131060, 0, 0, 131060, 1, 0, 131061, 1, 0, 131061, 0, 0, 131061, 65535, 0, 131071, 65524, 0, 131071, 65525, 0, 65536, 65525, 0, 65537, 65525, 0, 65537, 65524, 0, 65536, 65524, 0, 65547, 65535, 0, 65548, 65535, 0, 65548, 0, 0, 65548, 1, 0, 65547, 1, 0, 65547, 0, 0, 131071, 11, 0, 65536, 11, 0, 65537, 11, 0, 65537, 12, 0, 65536, 12, 0, 131071, 12, 0, -65534, 65526, 1441796, -2, 65526, 1441796, -65526, 2, 4, -65526, 65534, 4, -2, 10, 1048580, -65534, 10, 1048580, -65523, 0, 1048576, -65523, 65535, 1048576)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="RoomChangers" type="Node3D" parent="."]

[node name="x_pos" parent="RoomChangers" instance=ExtResource("2_4abfg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 2, 1)

[node name="x_neg" parent="RoomChangers" instance=ExtResource("2_4abfg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23, 2, 1)

[node name="z_pos" parent="RoomChangers" instance=ExtResource("2_4abfg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 25)

[node name="z_neg" parent="RoomChangers" instance=ExtResource("2_4abfg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, -23)

[node name="Doors" type="Node3D" parent="."]

[node name="z_pos" parent="Doors" instance=ExtResource("4_rgk6i")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 1, 19)

[node name="z_neg" parent="Doors" instance=ExtResource("4_rgk6i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -17)

[node name="x_neg" parent="Doors" instance=ExtResource("4_rgk6i")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -17, 1, 1)

[node name="x_pos" parent="Doors" instance=ExtResource("4_rgk6i")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 19, 1, 1)

[node name="RoomActivator" parent="." instance=ExtResource("4_2ndti")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1)

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
curve = SubResource("Curve3D_jgcr4")

[node name="SpawnPoint" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)

[node name="SpawnTimer" type="Timer" parent="SpawnPath"]
one_shot = true

[connection signal="timeout" from="SpawnPath/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
